# hanoi-geocode

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: admin_units.py  code_suggestions.py  decode.py  encode.py  grid.py  search.py  suggest.py
backend/app/services/: geocode_core.py  geometry.py  normalize.py  search.py  suggestions.py  word_mapping.py
backend/migrations/: 001_init.sql
backend/scripts/: apply_migrations.py  build_grid_intervals.py  import_admin_units.py  import_words.py  validate_dataset.py  validate_geocode.py
backend/tests/: test_decode_errors.py  test_encode_errors.py  test_geometry_intervals.py  test_grid_metadata.py  test_normalize.py  test_search.py  test_suggestions.py  test_validate_geocode.py  test_word_mapping.py  test_words.py
data/: hanoi_bound_2026.geojson  hanoi_wards_2026.geojson  vi_wiktionary_pos.jsonl  vi_wiktionary_pos.txt
docs/: ARCHITECTURE.md  DATA_ASSUMPTIONS.md  GEOCORE.md  LIMITATIONS.md  TILE_DATA.md
tiles/config/: config-openmaptiles.json  process-openmaptiles.lua
web/: .env.example  index.html  package-lock.json  package.json
web/public/: manifest.json  offline.html  service-worker.js
web/src/: App.test.tsx  App.tsx  grid.test.ts  grid.ts  main.tsx  styles.css
